Moved Configs into the iguanatweaksreborn folder and first json config option!